Processo de transdução do CINTIL concluido. Cabem ainda testes de eficiencia do produto gerado

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 tree-trad-2/
 raw-trad-2/
+tabelas de conversão - ocorrencias_cintil.csv
+tabelas de conversão - tabTraducoes - CINTIL.csv
+tabTraducoes.csv
